<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="technolifestyle.com.kotlinPractice.Notification.NotificationActivity">

    <Button
        android:id="@+id/simpleNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:text="@string/simple_notification" />

    <Button
        android:id="@+id/intentNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:text="@string/notification_with_intent" />

    <Button
        android:id="@+id/bigTextNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:text="@string/big_text_notification" />

    <Button
        android:id="@+id/inboxStyleNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:text="@string/inbox_style_notification" />

    <Button
        android:id="@+id/bigPictureStyleNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:text="@string/big_picture_notification" />

    <Button
        android:id="@+id/messagingStyleNotificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:text="@string/messaging_style_notification" />

</LinearLayout>
